--- a/sass/main.scss
+++ b/sass/main.scss
@@ -260,6 +260,17 @@ header {
   }
 }
 
+.thank-you {
+  height: 100vh;
+  background-position: top center;
+  
+  .container {
+    .main {
+      padding-top: 20vh;
+    }
+  }
+}
+
 #description {
   padding: 40px 0;
   
@@ -760,20 +771,20 @@ footer {
       border-right: none;
       border-bottom: 1px solid $gold;
       background-color: transparent;
-      color: darken($white, 10);
+      color: darken($white, 80);
       text-transform: uppercase;
     }
     ::-webkit-input-placeholder {
-       color: darken($white, 10);
+       color: darken($white, 80);
     }
     :-moz-placeholder { /* Firefox 18- */
-       color: darken($white, 10);  
+       color: darken($white, 80);  
     }
     ::-moz-placeholder {  /* Firefox 19+ */
-       color: darken($white, 10);  
+       color: darken($white, 80);  
     }
     :-ms-input-placeholder {  
-       color: darken($white, 10);  
+       color: darken($white, 80);  
     }
   } 
 
